This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix incorrectly formatted _codecs.charmap_decode error message
Type: behavior Stage: resolved
Components: Library (Lib), Unicode Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ezio.melotti, miss-islington, taleinat, vstinner
Priority: normal Keywords: patch

Created on 2020-10-17 20:05 by taleinat, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 19940 merged tekknolagi, 2020-10-17 20:05
PR 22743 merged miss-islington, 2020-10-17 20:38
PR 22744 merged miss-islington, 2020-10-17 20:38
Messages (5)
msg378827 - (view) Author: Tal Einat (taleinat) * (Python committer) Date: 2020-10-17 20:05
The error message for _codecs.charmap_decode uses a non-existent formatting placeholder "%lx", when a mapped value is a number outside the range of valid Unicode code points.

This was reported by Max Bernstein (@tekknolagi) on GitHub PR GH-19940.
msg378830 - (view) Author: Tal Einat (taleinat) * (Python committer) Date: 2020-10-17 20:38
New changeset 3635388f52b42e5280229104747962117104c453 by Max Bernstein in branch 'master':
bpo-42065: Fix incorrectly formatted _codecs.charmap_decode error message (GH-19940)
https://github.com/python/cpython/commit/3635388f52b42e5280229104747962117104c453
msg378831 - (view) Author: Tal Einat (taleinat) * (Python committer) Date: 2020-10-17 20:40
Thanks for the PR, Max!
msg378849 - (view) Author: Tal Einat (taleinat) * (Python committer) Date: 2020-10-18 06:00
New changeset 6a2aa4994e99ae8e43011a0290646fde4724a003 by Miss Skeleton (bot) in branch '3.9':
bpo-42065: Fix incorrectly formatted _codecs.charmap_decode error message (GH-19940)
https://github.com/python/cpython/commit/6a2aa4994e99ae8e43011a0290646fde4724a003
msg378850 - (view) Author: Tal Einat (taleinat) * (Python committer) Date: 2020-10-18 06:16
New changeset 400175ad91c1aa8abc6dfce108446e4210d0c157 by Miss Skeleton (bot) in branch '3.8':
bpo-42065: Fix incorrectly formatted _codecs.charmap_decode error message (GH-19940)
https://github.com/python/cpython/commit/400175ad91c1aa8abc6dfce108446e4210d0c157
History
Date User Action Args
2022-04-11 14:59:36adminsetgithub: 86231
2020-10-18 06:16:59taleinatsetmessages: + msg378850
2020-10-18 06:00:35taleinatsetmessages: + msg378849
2020-10-17 20:40:52taleinatsetstatus: open -> closed
resolution: fixed
messages: + msg378831

stage: patch review -> resolved
2020-10-17 20:38:55miss-islingtonsetpull_requests: + pull_request21706
2020-10-17 20:38:48miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request21705
2020-10-17 20:38:29taleinatsetmessages: + msg378830
2020-10-17 20:21:13taleinatsetnosy: + ezio.melotti, vstinner, - tekknolagi

type: behavior
components: + Library (Lib), Unicode
versions: + Python 3.8, Python 3.9, Python 3.10
2020-10-17 20:05:34tekknolagisetkeywords: + patch
nosy: + tekknolagi

pull_requests: + pull_request21704
stage: patch review
2020-10-17 20:05:08taleinatcreate