bpo-42065: Fix incorrectly formatted _codecs.charmap_decode error message (GH-19940)